<resources>
    <string name="app_name">OrientaApp</string>
    <string name="item_perfil">Perfil</string>
    <string name="item_tests">Tests</string>
    <string name="item_feedback">Feedback</string>
    <string name="item_add">Añadir</string>

    <string name="tv_Titulo">Título</string>

    <string name="opcionUser">Continuar como Alumno</string>
    <string name="opcionAdmin">Continuar como Docente</string>

    <string name="txt_login">Login</string>
    <string name="et_Email">Correo electrónico</string>
    <string name="et_Password">Contraseña</string>
    <string name="btn_Ingresar">Ingresar</string>
    <string name="txt_no_tienes_cuenta">¿No tienes una cuenta?</string>
    <string name="tv_registrarme">Registrarme</string>

    <string name="txt_registro">Registro</string>
    <string name="et_R_Password">Repita la contraseña</string>
    <string name="et_Nombres">Nombres</string>
    <string name="et_DNI">DNI</string>
    <string name="et_ApellidoPat">Apellido paterno</string>
    <string name="et_ApellidoMat">Apellido materno</string>
    <string name="et_Telefono">Número de teléfono</string>
    <string name="et_Edad">Edad</string>
    <string name="et_Genero">Género</string>
    <string name="et_Colegio">Colegio</string>
    <string name="btn_Registrar">Registrar</string>

    <string name="btn_ActualizarInfo">Actualizar</string>
    <string name="btn_CambiarPass">Cambiar contraseña</string>
    <string name="btn_Cerrarsesion">Cerrar sesión</string>


    <string name="txt_nombres">Nombres: </string>
    <string name="tv_nombres"> -- </string>
    <string name="txt_email">Email: </string>
    <string name="tv_email"> -- </string>
    <string name="txt_dni">DNI: </string>
    <string name="tv_rdni"> -- </string>
    <string name="txt_telefono">Teléfono: </string>
    <string name="tv_telefono"> -- </string>
    <string name="txt_genero">Género: </string>
    <string name="tv_genero"> -- </string>
    <string name="txt_colegio">Colegio: </string>
    <string name="tv_colegio"> -- </string>

    <string name="Txt_titulo_edit">Editar información</string>
    <string name="btn_Actualizar">Actualizar</string>

    <string name="Txt_olvide_pass">Olvidé password</string>
    <string name="Txt_ingrese_email">Ingrese su email para el envío de las instrucciones de recuperación</string>
    <string name="btn_Enviar">Enviar</string>

    <string name="Txt_cambiar_pass">Cambiar contraseña</string>

    <string name="et_pass_actual">Contraseña actual</string>
    <string name="et_pass_nueva">Contraseña nueva</string>
    <string name="et_r_pass_nueva">Repita contraseña nueva</string>
    <string name="btn_CambiarPassword">Cambiar</string>


    <string name="et_Alumno">nombre del alumno</string>


    <string name="item_uid">uid del usuario</string>
    <string name="item_nombre">nombre del usuario</string>
    <string name="item_email">email del usuario</string>

    <string name="et_buscar_usuario">Buscar usuario</string>

    <string name="txt_nombre_usuario">Nombres</string>
    <string name="txt_estado_chat">Online</string>
    <string name="Et_mensaje_chat">Escriba algo</string>
    <string name="Tv_tiempo_mensaje">dd/MM/yyyy hh:mmm</string>

    <string name="etBuscar">Buscar</string>
    <string name="tvFecha">dd/MM/yyyy</string>

    <string name="txt_titulo_test1">Test Psicométrico</string>
    <string name="txt_titulo_test2">Test de Aptitudes</string>
    <string name="txt_titulo_test3">Test de Preferencias</string>
    <string name="txt_titulo_test4">Test de Valores</string>
    <string name="txt_titulo_test5">Test de Iq General</string>
    <string name="txt_titulo_test6">Test Psicológico</string>
    <string name="txt_titulo_feedback">Carreras Recomendadas</string>

    <string name="txt_descripcion_test1">Conoce tus capacidades psíquicas</string>
    <string name="txt_descripcion_test2">Evalúa tus habilidades de razonamiento lógico y verbal</string>
    <string name="txt_descripcion_test3">Combine varios factores para recomendar carreras</string>
    <string name="txt_descripcion_test4">Identifica tus valores fundamentales</string>
    <string name="txt_descripcion_test5">Determina tu inteligencia general</string>
    <string name="txt_descripcion_test6">Comprende los rasgos de tu personalidad</string>

    <string name="BtnCerrarVisualizador">Cerrar</string>

    <string name="txt_titulo_add_student">Añadir notas de estudiante</string>
    <string name="select_student">Seleccionar alumno:</string>
    <string name="add_grades">Introduzca las notas del alumno:</string>
    <string name="course_1">Matemáticas</string>
    <string name="course_2">Comunicación</string>
    <string name="course_3">Ciencias naturales</string>
    <string name="course_4">Historia</string>
    <string name="course_5">Participación Cívica</string>
    <string name="course_6">Educación Física</string>
    <string name="course_7">Arte</string>
    <string name="course_8">Inglés</string>
    <string name="course_9">Religión</string>
    <string name="course_10">Educación para el Trabajo</string>
    <string name="btn_save_grades">Guardar Notas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>